@@ -1,0 +1,8 @@
+package Config::JFDI::Carp;
+
+use strict;
+use warnings;
+
+use Carp::Clan::Share;
+
+1;
